# ChangeLog for net-misc/suite3270
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/suite3270/ChangeLog,v 1.52 2013/04/02 13:17:47 ago Exp $

  02 Apr 2013; Agostino Sarubbo <ago@gentoo.org> suite3270-3.3.12_p12.ebuild:
  Stable for s390, wrt bug #462614

  02 Apr 2013; Agostino Sarubbo <ago@gentoo.org> suite3270-3.3.12_p12.ebuild:
  Stable for sparc, wrt bug #462614

  27 Mar 2013; Mike Frysinger <vapier@gentoo.org> suite3270-3.3.12_p12.ebuild:
  Avoid use of xmkmf/imake #462699 by Agostino Sarubbo.

  27 Mar 2013; Mike Frysinger <vapier@gentoo.org> suite3270-3.3.12_p12.ebuild:
  Fix random parallel install errors.

  27 Mar 2013; Mike Frysinger <vapier@gentoo.org> +files/Makefile.in,
  suite3270-3.3.12_p12.ebuild:
  Build/install in parallel across all subdirs.

  22 Mar 2013; Agostino Sarubbo <ago@gentoo.org> suite3270-3.3.12_p12.ebuild:
  Stable for ppc, wrt bug #462614

  22 Mar 2013; Agostino Sarubbo <ago@gentoo.org> suite3270-3.3.12_p12.ebuild:
  Stable for x86, wrt bug #462614

  22 Mar 2013; Agostino Sarubbo <ago@gentoo.org> suite3270-3.3.12_p12.ebuild:
  Stable for amd64, wrt bug #462614

*suite3270-3.3.12_p12 (21 Mar 2013)

  21 Mar 2013; Robin H. Johnson <robbat2@gentoo.org>
  +suite3270-3.3.12_p12.ebuild:
  Bump per sec bug #462614.

  17 Mar 2013; Markos Chandras <hwoarang@gentoo.org> metadata.xml:
  Add proxy-maintainers to metadata.xml

*suite3270-3.3.12_p10 (06 Dec 2012)

  06 Dec 2012; Mike Frysinger <vapier@gentoo.org> +suite3270-3.3.12_p10.ebuild:
  Version bump.

  16 Oct 2010; Brent Baude <ranger@gentoo.org>
  suite3270-3.3.10_p3-r1.ebuild:
  stable ppc, bug 335188

  12 Oct 2010; Raúl Porcel <armin76@gentoo.org>
  suite3270-3.3.10_p3-r1.ebuild:
  s390/sparc stable wrt #335188

  22 Sep 2010; Markos Chandras <hwoarang@gentoo.org>
  suite3270-3.3.10_p3-r1.ebuild:
  Stable on amd64 wrt bug #335188

  04 Sep 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>