@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 AUX Makefile.in 288 SHA256 c562d7dd6d1396a7fc1232f4d780d4eec4b95640e55a329f32918d20be789482 SHA512 e85cf2775af99af4d004a18f3580748866786544b69ca7191c0a2bee0ebb2a652aaf3024f9baaa029e9c730f1765b37ee07d6f8430649f79607369feca862d2d WHIRLPOOL d42368f46f433721c4ad6c24b4aff659c308d497ffb5f450578fb6d6a19a6fc8fe18481fb323c59ff0021a7669af69cbe988fc3ca3dfcdc03c33373a39e4b156
 AUX configure-3.3.5.patch 2695 SHA256 7cae5b1c5223a80e6cb9f9bd11907ff797ba25c3428041d1ac3770f4c3c504ed SHA512 21cb462459f1c3deeb54262c72b485308d1dae134c69654f5724e8ffa1e24edcae7d30325443a8d0398ef320d1c105fcf8fe16ea3be5e36b78dac87c53914a80 WHIRLPOOL 40c0325b76ceea362279c98e026805f2117a60a94b2287fcc9289b7cb6204034d3d576e031de54bbb73033dbd728a7c118d4382af9b82defb4924320f7a766c0
@@ -8,6 +8,7 @@ AUX suite3270-3.3.10_p3-fix-x3270-dbcs.patch 411 SHA256 2f941e2a35382e9f15f970db
 DIST suite3270-3.3.10ga3-src.tgz 6419282 SHA256 c94cd13e82f6f335461f1de7a816e627fa7e55f68852a5f513194067bccc4408 SHA512 c30af38bff1517a96250365bc6beec19f8ae4c8b6cae7b68c2279749796b370d1ecaf4a4dc3abc25780bd67bbdf9ef00bc9f8d6bb332c642e672ba24f623e6ab WHIRLPOOL e69cb4f7a7174050e35edecaf461385ccef13b7f396625e735ac7455aae6a7f90c7aee9c2a12fef6ec7cd163b2a84c7f33653d3b002a73dcda86cf14ee75f48d
 DIST suite3270-3.3.12ga10-src.tgz 6670311 SHA256 f93a51c19a6f13a97e895343f79ce867b53ca6e672b8fa5a491f2e2fed7294d6 SHA512 8c6e31dfcfb40ee81e1984648cff64d96f7cfadb45a221cb59b5e234ee1a5dd25b7d0ccccf04e11b740eb4237d8228f61186d1107b3d7bfa6405e7cc95b8d32f WHIRLPOOL 4958e0d07cf8ff5ef91862fe8fda0cb559a89e69be91914bd5c12c8afeea5b94ff6523faeeaa748a1bb86d6df19c70564ded116c4ec9cf6eceb07e9e418c6823
 DIST suite3270-3.3.12ga12-src.tgz 6695998 SHA256 2b7ca0614a7b0d97507753f933f4be04aa16a4bc255ad80b2c14a9dfebbcb8b8 SHA512 61b5bc1682af6844609356b25eec5b1c27a057a060e88e51787c8b8bc73123a01e344a02e9104c78b037e46d15d6f6824caa85a5902e51115aac468eb0b3b250 WHIRLPOOL 03582957daa9362594a589094edfc0e724ad3d6f2f9fa796865aad94697592b492a67d6ccfd4588ee19c8837413e44ac7bb7be0dacf19b621ea93659ff7845bf
+DIST suite3270-3.3.13ga7-src.tgz 6824013 SHA256 ab5cde5eb19dcb4ed7d10f47734fca1a6d9a889515772e5bfa9ba00f34f19645 SHA512 d1a8aebea57284bb161922ef1603b2c1d65838a1e0c271e34c467e48a40e855303a4440ba6519ce52c54a373d5d1ec5ba6cf8470c66454b8f931744aab6a0bcb WHIRLPOOL 31712644f771870903e12cb09064d58b757cc10c5111388eb86f7979852ddbfc6af181e243ccbf64abed405862fdd6b8ef5d09cbb612b86d4936cac24d81fb73
 DIST suite3270-3.3.5p8.tgz 3244414 SHA256 c33acfecab9b720d9fbc342d2c53c4c3ff999f67b6f2e387dd27b97f2c49eeed SHA512 60daec899106adfed604cb00fb3085ff700d3ee554f7a0cafe4dd524c19cfc0d186489d088ddfd41aa15c2366b8d9eadc77ef1e8549ed31c1b289d7c368f15b5 WHIRLPOOL 491475567d4a6ec3a4a46c4ba9eaf4b982b61571b5f2767481b5ebc2b8c22fbb436a9434913057f52ed27632622b92ce39e123ab7fe2996e236d77ac41ebd182
 DIST suite3270-3.3.6.tgz 3315214 SHA256 189f0f639186060b7bbb3093fce60bfb7f35fa147e051a24753236358f609b5e SHA512 0b59c231a5cb4447fb5d2263cf3be0812773450ab2bfb14923ffdc05e5554bcaa63f15d28bdd3fde3d4c0fe31efb284a4e4fd43b448b1adb8d1cf52e3c5b5957 WHIRLPOOL a4d95cc2b399dbfdb1a4b00c804f1bfc036bc8eb0ec463275a256caaef03348b33b60c4bd46eb3e8a7168e2bed1c2b9a9d488ddefc6c1267381de390041161ba
 DIST suite3270-3.3.7.tgz 3357492 SHA256 5b5c3b57cdc3a8e4c2fdd9fa59ef198a5a2ca73f4ad49a42869b709c47318444 SHA512 69779666b3f88c1c8291df56298ced3a64d3f12f7b7dc191f288fd62b4beaa387fc15f418526ab3d0091837de9bd9e3fd6412e1b6fa25347d5fcaea16be34e79 WHIRLPOOL 33a296e491b1907c0a61c39036d0af7a36440b9ae3e98f54020a737ed3ca4f8239f8a3cdb038caf8995e359a3c24f7626415d88df5586183548f839f4db5ac0a
@@ -19,6 +20,7 @@ EBUILD suite3270-3.3.10_p3-r1.ebuild 1917 SHA256 62ca2f14eac6a0da829a13258e73613
 EBUILD suite3270-3.3.10_p3.ebuild 2219 SHA256 d750bb1bb4e8e3d634dc537a52454117dba3cde289cfa186b19fd59d0d7c488b SHA512 fd391f11892c77f660dda4a1606e62ce9a0ee5f7f7582bec45f8bd1ec3fa8b748a5f9f329a22b6b137dec5b821d1ce7669eb9ea27a068830bfca0c0364373be3 WHIRLPOOL 7e5d741bdcd9c9e6a35ee616e05c5b096033866f808256f54f500234ccc52b56e10cb7e035e1bcfcf956146bd0d0eb46bb380c11d0eacfa3969bbb2c67def3b1
 EBUILD suite3270-3.3.12_p10.ebuild 2096 SHA256 ba46193b05b29c932c6ec986ac144742df4f05c8a6e266b25e9f723d7d5ea73c SHA512 b83ea934faa288be2ced3578cc2f507ea4cedffa41b042300aa10e2e6a0f11c4f680f3143b0e4aa6ffad2a9adc98158d615658203efc92c9f3833891562e2cb5 WHIRLPOOL deb1dc1d9cf1d0a4d471bddac20951d566af82f62623050711f2ade6f17c53cffe97a987dd73297228e543b0d1f87467bc15decaac63025c45fdcc39b3d9b706
 EBUILD suite3270-3.3.12_p12.ebuild 2498 SHA256 80a3ce78e2f107b474d4e22446ea6957a703c3e653e90105220b1f8ba60dd935 SHA512 c4c448965af220295c62a26796e953b411db9a09e3942639823df4da096e1035ef1c53c432fd449716dfa9844dbf321df668df2ae2c90e15dffa4f83387e8441 WHIRLPOOL 7fc4657c695e9722689cf30e4fb7a0cb88b0461f20af6a01c4facc801f5b302afc230c168c98e5d1f05e56452b5bbaaf5a29fb683f236293bdd0c739ac03d575
+EBUILD suite3270-3.3.13_p7.ebuild 2505 SHA256 544dc55aff50a42c16dcc5d32b1e6482069588125062afb0bd0df1545c99e703 SHA512 7379c7c72637f4c77a2888afabe4f2970e3db69c89ac6ee6c69d78b1598f5db90b7f46650f6596e019b14a69731c0beb1ec01e94bd4399444569e6de005da408 WHIRLPOOL 9f3529c1435f78016e4faa40181d2e4a0e1f9f07a695a8f1aa5011c8c341d2a869d56622bf1177451f20d5207da7356d4b3e67723ed9984523172cab6a71743f
 EBUILD suite3270-3.3.5_p8.ebuild 2217 SHA256 ca029c15079be7ba6f14ff402cad1e8d7aa7d0d5e84d034b8176d18798dafdfa SHA512 110c44a726ed448b0c90c9e0ab8d80d46258ed379c459d4dc07ea88f82290d94c14063ee36ee90aa90c7729f52f9d1e8a4b53a55bc539ca642795c1a288ccd74 WHIRLPOOL 4cce1dc5339a3054ce64a8302f6e655da3a79bb72e570dac4c2ca7d2c01c129af4e1ddade0367ed8b14142416ab49d21f5b592f2be6841f87c107a78dcd756e0
 EBUILD suite3270-3.3.6.ebuild 1965 SHA256 4743829e4511e22f468eedeb1a184bf817e19c806ed62c15ed06f2547b29ca41 SHA512 13dda791a3831acd9ea279c26b1d18e9819be43007ffbbf1643c77b2e53b7756f89eb4c467f3156df061946866055f8bf6311078be9e78e3d2e47fafd86d425c WHIRLPOOL 01b87370595ebf048e4b4047054cc4b98276a77972fef0095587377d56207a7c4336531500be61cb69920abd52ed00161f7e4dc50b39910c21715899ac58b9ec
 EBUILD suite3270-3.3.7.ebuild 1961 SHA256 529341f565fe16dafaf987504a524f4ea3cf6cdd49ddbe6acf8019fdd8050622 SHA512 0d61ab485ff44ac5891d18bf104a3484c54e6e4faf51b72a0ad67f7af3df735480214d7f6c6f92732ac4179a5679bf6cb30efff5451f0012026185ff4dd97d11 WHIRLPOOL 66bb432cf49d8483c4c15b1521aea04f172294a590ea9f749d3c9712f4aa296455f40909c4e6cf7a3a21352ad544e885531962665d69eaf56dbe326aa793e9b4
@@ -26,22 +28,22 @@ EBUILD suite3270-3.3.7_p5.ebuild 1972 SHA256 032c71b79ea2bcbc2c9f685a53d314fb1b8
 EBUILD suite3270-3.3.7_p8.ebuild 1977 SHA256 edcb1814c0c7cd1702fceb8ca7da968b704710eef450e9fb823d5e442194c1c6 SHA512 2409c427205cfae5b99edc9a891d2ddc696103fe1f5e3a068b7b60cfc47f88c2065101bc8bc025793e628c4e2b578cd76c42e896e117110921eca2c9c5e26e7c WHIRLPOOL 906d4e683bfa7a5ba27ca1594614be5d2fd06bd8f20c933cea5178ff40f157fc5fa05ef7cf549b99b7c405b884952250f8f632b60951d178eeabcdbb81b7325b
 EBUILD suite3270-3.3.8.ebuild 1949 SHA256 fb4d949b9317e0fccfc7035541f59331dee7cca2aea25a9615e1d80582e34ece SHA512 91c9a2fb59f66191ff4b49564ec0bb3cbb7c63a48b2a7756414381dc785e5c6461c392aad2a7b4d77fab77a57658afc415e537824db9f74dd0c8912fca13dc65 WHIRLPOOL 5fce954d5b28244a407acf35875f9c53b3ef71df3e4924211ba7ed13611c976c3a7f1bfe27b18685f5f1320fbdfaad8583c0d6770a93ba24a2d90a1edf77226c
 EBUILD suite3270-3.3.9_p12.ebuild 1982 SHA256 0f90911418b70df785525a4bf76dd5a0e82e8c9bba447648db0df49989f80038 SHA512 62bd2ddfe30c06b11152fb8de76fbe050404dc59b4f16c03ffff1c88c51224ec2c633a2ec8e59f6816644711abbf4ed8b63aba49548065f4cb88412c9a42099d WHIRLPOOL f31be09d9e56630d595fe726be6a06b58669539c2b2242b735b07fa8d6b857f141620c47acf92a4c9f566e8ac092799001c2815df274e47b1a9a03c39fb6dcfc
-MISC ChangeLog 7423 SHA256 5ab6bf8e22207f02c41e178c96f2c129f63c7efc65da6e2e4ba49ab8de4c6b2f SHA512 1808d0b3698f8f8e7fb4eaa091c0b32b18ccc463e33f72a728c95bd7417fa65a136e4bb05fbd5d0c007ef9369979cbb71df5e9611915db26c7e0d429b68fc1e9 WHIRLPOOL ec6af2e42ac7fb11d7b800e46ef9fba52ffee5e36a458e8c23500658117f975c62f6223b1d7d199c1ab790b5bfec173d37e64e97e1802ce4f6ceab89767d15b2
+MISC ChangeLog 7558 SHA256 4ee9e85c6478d723d5d7e268c67a25b40acf436e3d06b78d88bb74691c7aa07d SHA512 1c11415c64fd2a8e11ebf21ab621fa43d9f307baa3141411bd1e16ca50e32e3c16d8d76cd312d6c86be560ecf9c83252aa0ba0d72c63d6fb292ab0be4fd014e6 WHIRLPOOL c501b056f53b054e294593b5070e0362136926bb1e4d717eaf12038d71f9cadbf0d93f24cc0ab3d3d9457ae3fe94e17a58ed1040e407bd701cf6ca7ae51a0768
 MISC metadata.xml 512 SHA256 768b28537450a311ce210d5faed94b3bffaca34bedefef2efb797db466070150 SHA512 fcb1a41a0574709c48ce15c0bc4910d1c7890214ede9637ea4ec2e1bcc7b3419e6fe7e6596e69ca2b0438a97e80ed6a0db7952fb19d323cecff59e31f17fa743 WHIRLPOOL 39fd53d6f56a7929cbaf5c510b71f0751d3cc7ba592067770ee4cc3419ea7b477afa76a6e6bcd44079d69c146e530c44032d3f001b1d1300d2c955cc4210b294
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCgAGBQJRWtnnAAoJELp701BxlEWfoN4QAMWEVFo8GRCSy0bVKC7gjSGa
-q19vvB1tIq8qjnWFP7zAJbjNc3SMtxHUoxlGxbQ8jB7TT9uVOfq8N0MvFH4x9LVH
-CSL7ByFXnYdecOQUv5fFrVX2ilbyO/j1xXyc6Mo4O+SsTEnfJAQn1R/k0SbI9U+I
-GOgV7udDAixYB98zfDMn6dOtbTF3eOxV92oZQSc1FhkR0ZP3y7b7P4gAO0ZsHEqB
-rIKyFQH4Y/GWqa91+/xI7GQcV8cVDPQLze4ct4g2ypSpR8QCKSBnJdDLTN9UU54Z
-VWD2D0mH+AlyQ9QVcrndWofyX9neOpOhL2vKg+RgXpOt/fvx+PHIEW419/n4aolT
-PwqPpDr5NGGUV7Yyl2kWqK9WItFR1nJt3N0bmtmeV925UQTJV8S7u7x/nsRS8ZTZ
-m5rtVEUth6AQ/mxKm5a0U60H0sSE6AMcP7A4Q2D1j/bkEM/9ZMIfbbPhOg6MwrRa
-aqYZVrwMkOIqxVBeh24csCsQuYFR0I7zmT6op94vHz8wrRe7M315Tq92w96LfTzM
-NawzXyLvetnEae6Mrl01AeselJhVogvj90J7O0LmlFZnXthwpvbC3D6A7fXAl6E0
-pat+aWKQSx+4y/3SbFUkxgRUIAOkz23LPIejpOr7R7ghdKGE+kSw0EHwpxa+jvGk
-CVxdRbm/bhRAHtKzxuvi
-=XWhQ
+iQIcBAEBCAAGBQJS10xOAAoJEPGu1DbS6WIAlMAP/1k75aRop4QFySRLxtUNeW1S
+2Rptl2TWrK7G9rXOWEVbZO1hRcQTlP2Hf3ZdHbRDLrofhVnmxQPDIcrmOt0ByUFV
+h/IyTeVBPHi3gcWbI1LXBGiU0MBPN6yLsu5jtJLOh72COPwC+XOFWMonSPaHUpmQ
+bdsRYreYG04DNKT1vAkzSaBL9U4QEkpkkFYBf4ulCG0MfNbQDPIzCQM3lXfi8e8v
+pirU9RnovBi8gXhpb0MUonhDIliKxeb8176e5/5idjZztetDQJRIwigu7ewk5B9r
+S3m8tQqDxgvPqc0ddkiiR/B7NzGTgxRSA+HuK7xziOepOu3+8BwFS7bY88wQZf4K
+TbRaoqNdClALJ/KCaSptgqa0JW8Bji2Xa05+e5xBHBbskvzhvxjWyshmAJmXyWyE
+vbZ5B6VAiWxnun9n5vcZ9h5/dlcGoIcmJHQsUuvpwkmftz7NE40+MObpPmHpiF3N
+fX+h0+VwPjDzX7v01m1x7aUrBBZvUP1fH9UdYUsJ+IibR/a5f90Ghola+JBih3EQ
+tOIyTmGfucpNzMM0QPlX5lIWkXmVKULlyBYm/knKEv4tICitUVaItQKtPOVJV2lS
+l0ph5NdEswN20g5mq7/7+sll06vlUMHjxxs6w+uHXMouX9O3stccb3i7woFgY/n7
+349FR3cLYVYuKPbEEhaG
+=pKub
 -----END PGP SIGNATURE-----
