@@ -1,6 +1,11 @@
 # ChangeLog for net-misc/suite3270
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/suite3270/ChangeLog,v 1.52 2013/04/02 13:17:47 ago Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-misc/suite3270/ChangeLog,v 1.53 2014/01/16 03:04:39 vapier Exp $
+
+*suite3270-3.3.13_p7 (16 Jan 2014)
+
+  16 Jan 2014; Mike Frysinger <vapier@gentoo.org> +suite3270-3.3.13_p7.ebuild:
+  Version bump.
 
   02 Apr 2013; Agostino Sarubbo <ago@gentoo.org> suite3270-3.3.12_p12.ebuild:
   Stable for s390, wrt bug #462614
